--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
     "inkjet": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
@@ -30,7 +34,8 @@
     "node-vibrant": "^3.2.1-alpha.1",
     "png-js": "^1.0.0",
     "slugify": "^1.4.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
